Fix name-input-screen
Fix horizontal scrollbar appearing on resizing by changing width to max-width.
Fix overflowing of start button by changing height to min-height.

--- a/style.css
+++ b/style.css
@@ -76,8 +76,8 @@
 }
 
 .name-input-screen {
-    width: 100vw;
-    height: 100vh;
+    max-width: 100vw;
+    min-height: 100vh;
 }
 
 input[type="text"] {
@@ -112,7 +112,7 @@ input[type="text"] {
 }
 
 input[id="start-btn"] {
-    margin-top: 4rem;
+    margin: 4rem 0rem;
 }
 
 input[type="button"].return-btn {
